modifed appointment controller
