# generated/routes.ts
@@ -531,7 +531,7 @@ const models: TsoaRoute.Models = {
             "id": {"dataType":"string","required":true},
             "cardNumber": {"dataType":"string","required":true},
             "status": {"dataType":"string","required":true},
-            "doneBy": {"dataType":"string","required":true},
+            "doneBy": {"dataType":"string"},
             "location": {"dataType":"string"},
             "branch": {"dataType":"string"},
             "assignedTo": {"dataType":"string"},
@@ -568,10 +568,13 @@ const models: TsoaRoute.Models = {
         "properties": {
             "cardNumber": {"dataType":"string","required":true},
             "location": {"dataType":"string"},
+            "description": {"dataType":"string"},
             "branch": {"dataType":"string"},
-            "status": {"dataType":"union","subSchemas":[{"dataType":"enum","enums":["Activated"]},{"dataType":"enum","enums":["Unactivated"]}],"required":true},
-            "doneBy": {"dataType":"string","required":true},
+            "status": {"dataType":"union","subSchemas":[{"dataType":"enum","enums":["assigned"]},{"dataType":"enum","enums":["available"]},{"dataType":"enum","enums":["maintenance"]}],"required":true},
+            "doneBy": {"dataType":"string"},
             "assignedTo": {"dataType":"string"},
+            "assignedAt": {"dataType":"datetime"},
+            "lastUsed": {"dataType":"datetime"},
         },
         "additionalProperties": false,
     },
@@ -580,11 +583,14 @@ const models: TsoaRoute.Models = {
         "dataType": "refObject",
         "properties": {
             "cardNumber": {"dataType":"string"},
+            "description": {"dataType":"string"},
             "location": {"dataType":"string"},
             "branch": {"dataType":"string"},
-            "status": {"dataType":"union","subSchemas":[{"dataType":"enum","enums":["Activated"]},{"dataType":"enum","enums":["Unactivated"]}]},
+            "status": {"dataType":"union","subSchemas":[{"dataType":"enum","enums":["assigned"]},{"dataType":"enum","enums":["available"]},{"dataType":"enum","enums":["maintenance"]}]},
             "doneBy": {"dataType":"string"},
             "assignedTo": {"dataType":"string"},
+            "assignedAt": {"dataType":"datetime"},
+            "lastUsed": {"dataType":"datetime"},
         },
         "additionalProperties": false,
     },
@@ -774,6 +780,7 @@ const models: TsoaRoute.Models = {
             "department": {"dataType":"string"},
             "appointmentDate": {"dataType":"string"},
             "appointmentTime": {"dataType":"string"},
+            "user": {"dataType":"nestedObjectLiteral","nestedProperties":{"phoneNumber":{"dataType":"string","required":true},"department":{"dataType":"string","required":true},"email":{"dataType":"string","required":true},"fullName":{"dataType":"string","required":true}},"required":true},
             "timeDuration": {"dataType":"string"},
             "appointmentLocation": {"dataType":"string"},
             "createdAt": {"dataType":"datetime"},
@@ -810,13 +817,14 @@ const models: TsoaRoute.Models = {
             "userId": {"dataType":"string","required":true},
             "purpose": {"dataType":"string","required":true},
             "host": {"dataType":"string","required":true},
-            "status": {"dataType":"union","subSchemas":[{"dataType":"enum","enums":["pending"]},{"dataType":"enum","enums":["confirmed"]},{"dataType":"enum","enums":["canceled"]},{"dataType":"enum","enums":["onhold"]},{"dataType":"enum","enums":["completed"]}]},
+            "status": {"dataType":"union","subSchemas":[{"dataType":"enum","enums":["pending"]},{"dataType":"enum","enums":["confirmed"]},{"dataType":"enum","enums":["canceled"]},{"dataType":"enum","enums":["onhold"]},{"dataType":"enum","enums":["completed"]}],"required":true},
             "department": {"dataType":"string","required":true},
             "company": {"dataType":"string","required":true},
             "appointmentDate": {"dataType":"string","required":true},
             "appointmentTime": {"dataType":"string","required":true},
             "timeDuration": {"dataType":"string","required":true},
             "appointmentLocation": {"dataType":"string","required":true},
+            "note": {"dataType":"string","required":true},
         },
         "additionalProperties": false,
     },
@@ -834,6 +842,7 @@ const models: TsoaRoute.Models = {
             "appointmentTime": {"dataType":"string"},
             "timeDuration": {"dataType":"string"},
             "appointmentLocation": {"dataType":"string"},
+            "note": {"dataType":"string"},
         },
         "additionalProperties": false,
     },
@@ -3006,7 +3015,7 @@ export function RegisterRoutes(app: Router) {
         const argsappointmentController_createAppointment: Record<string, TsoaRoute.ParameterSchema> = {
                 data: {"in":"body","name":"data","required":true,"ref":"AppointmentCreateAttributes"},
         };
-        app.post('/api/appointments/create',
+        app.post('/api/appointments',
             authenticateMiddleware([{"jwt":["appointment:create"]}]),
             ...(fetchMiddlewares<RequestHandler>(appointmentController)),
             ...(fetchMiddlewares<RequestHandler>(appointmentController.prototype.createAppointment)),
@@ -3038,7 +3047,7 @@ export function RegisterRoutes(app: Router) {
                 id: {"in":"path","name":"id","required":true,"dataType":"string"},
                 data: {"in":"body","name":"data","required":true,"ref":"UpdateAppointmentAttributes"},
         };
-        app.put('/api/appointments/:id/update',
+        app.put('/api/appointments/:id',
             authenticateMiddleware([{"jwt":["appointment:update"]}]),
             ...(fetchMiddlewares<RequestHandler>(appointmentController)),
             ...(fetchMiddlewares<RequestHandler>(appointmentController.prototype.updateAppointment)),
